--- a/modules/casino/config.ini
+++ b/modules/casino/config.ini
@@ -1,6 +1,6 @@
 [VARIABLES]
 min_bet = 5000
-max_bets = [0, 10000, 20000, 35000, 70000, 135000]
+max_bets = [0, 10000, 20000, 35000, 70000, 135000, 135000]
 [phrases]
 lose=["К сожалению, вы проиграли {cash}$. В следующий раз Вам точно повезёт!", "Увы, фортуна отвернулась от Вас и забрала {cash}$!", "Как жаль! Вы стали беднее на {cash}$!", "Увы, эти {cash}$ я заберу, но в следующий раз Вам точно повезёт!", "Сейчас Вы проиграли {cash}$, но не отчаивайтесь - всё впереди!", "Надеюсь, в следующий раз Вы не проиграете {cash}$, как сейчас!", "Вы проиграли {cash}$", "В этот раз Вы проиграли {cash}$", "Больше не проигрывайте {cash}$", "Как можно было проиграть {cash}$", "Это проигрыш {cash}$", "{cash}$ были утеряны", "{cash}$ испарились", "{cash}$ исчезли"]
 win=["Поздравляю с победой!", "Вы заслужили эти деньги!", "Вы достойны этого приза!", "Рад осчастливить Вас новостью о Вашей победе!", "Ловите лёгкие деньги!", "Вот это удача!", "Мне бы такое везение!", "Поделитесь немного своей удачей :D", "Поздравляю!"]
