--- a/modules/chance/config.ini
+++ b/modules/chance/config.ini
@@ -1,2 +1,2 @@
 [phrases]
-шанс=["Мне кажется", "Я уверен", "Определённо", "Абсолютно точно", "Я провёл эксперимент и выяснил", "После тщательного расследования был сделан вывод", "Как же можно сомневаться", "Неужели никто не знал", "Достоверный факт", "На основе известных мне фактов, был сделан вывод", "Учитывая все знания, которыми обладает человечество", "По воле Врат Штайнера", "Врата Штейна решили"]
+шанс=["Мне кажется", "Я уверен", "Я провёл эксперимент и выяснил", "После тщательного расследования был сделан вывод", "Как же можно сомневаться", "Неужели никто не знал", "Достоверный факт", "На основе известных мне фактов, был сделан вывод", "Учитывая все знания, которыми обладает человечество", "По воле Врат Штайнера", "Врата Штейна решили"]
